2007-10-30  David Bateman  <dbateman@free.fr>

	* symtab.cc: Doc fixes for small book format.

2007-10-30  John W. Eaton  <jwe@octave.org>

	* file-io.cc (fopen_mode_to_ios_mode): Handle 'W' as 'w' and 'R'
	as 'r', but warn about them.

2007-10-29  Thomas Treichl <Thomas.Treichl@gmx.net>

	* data.cc: Include sytime.h, sys/types.h, and sys/resource.h.

2007-10-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (figure::properties::set_currentaxes): 
	Allow currentfigure to be NaN.

2007-10-25  Michael Goffioul <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/__contourc__.cc: Use unsigned int instead of uint.
	(drawcn): Use 1 << k instead of pow (2, k).

2007-10-25  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_record::TYPE): Delete trailing comma in enum decl.

	* ov-base.h (DECLARE_OV_TYPEID_FUNCTIONS_AND_DATA): Use
	OCTAVE_EMPTY_CPP_ARG to avoid annoying Sun compiler warning.

	* Makefile.in (graphics.h): Use $(AWK) instead of awk.

	* DLD-FUNCTIONS/time.cc (Ftime, Fmktime): Avoid unnecessary cast.

	* data.cc (Ftic, Ftoc): Call double_value on octave_time objects
	instead of relying on conversion operator.
	* ov.cc (octave_value::octave_value (octave_time)): Likewise.

	* variables.cc (symbol_out_of_date): Use explicit conversion to
	time_t instead of relying on conversion operator.
	* ov-fcn-handle.cc (octave_fcn_handle::subsref): Likewise.

	* data.cc (tic_toc_timestamp): Rename from __tic_toc_timestamp__.
	Change all uses.

2007-10-24  David Bateman  <dbateman@free.fr>

	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::OCTAVE_VALUE_INT_MATRIX_T
	(const ArrayN<OCTAVE_INT_T>&)): New constructor.
	* ov.cc (octave_value::octave_value(const ArrayN<T>) with T being
	octave_int8, octave_uint8, octave_int16, octave_uint16,
	octave_int32, octave_uint32, octave_int64, octave_uint64): New
	constructors.
	* ov.h (octave_value::octave_value(const ArrayN<T>) with T being
	octave_int8, octave_uint8, octave_int16, octave_uint16,