@@ -49,6 +49,8 @@ extern std::string Vinfo_file;
 // (--info-program program)
 extern std::string Vinfo_program;
 
+extern std::string do_which (const std::string& name);
+
 #endif
 
 /*
